--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   otp_text_field: ^1.1.3
   lottie: ^2.7.0
   image_stack: ^2.1.1
+  syncfusion_flutter_calendar: ^24.1.41
+  encrypt: ^5.0.3
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_test:
@@ -69,8 +72,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/
     - assets/icons/
+    - assets/images/
     - assets/animations/
 
   # An image asset can refer to one or more resolution-specific "variants", see
